# SC2ReplayAnalyzer

./: .gitignore  README.md  pyproject.toml
front/: package-lock.json  package.json
front/public/articles/: updatehistory.md
front/src-tauri/: tauri.conf.json
front/src-tauri/capabilities/: default.json
front/src-tauri/src/: main.rs
front/src/assets/: icons_library.json
front/src/components/: Sidebar.vue
front/src/components/Batch/: BatchA.vue
front/src/components/Home/: About.vue  Guide.vue  Homepage.vue
front/src/components/Mydata/: Mydata.vue
front/src/components/Reminder/: FloatingBanner.vue  ReminderS.vue
front/src/components/Single/: SingleA.vue
front/src/components/widget/: MessageBox.vue
front/src/pages/: LogViewer.vue
front/src/router/: index.ts
src/app/: constants.py  libsK.py  log.py  main.py
src/app/analysis/: Analysis.py  core.py  putin.py
