[project]
name = "SC2_Replay_Analyzer"
version = "1.5.2"
# date-updated = "2025-10-24"
description = "SC2 Replay analysis tool"
authors = [{ name = "AltriaZ" }]
readme = "README.md"

requires-python = ">=3.10"


dependencies = [
  "matplotlib==3.10.1",
  "numpy==2.1.3",
  "pandas==2.2.3",
  "sc2reader==1.8.0",
  "pydantic>=2.12.4",
  "openpyxl>=3.1.5",
  "tomli>=2.0.1",
  "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app"]
